Initial project upload

--- a/options.html
+++ b/options.html
@@ -71,6 +71,7 @@
         <option value="grok-1-mini">Grok-1 Mini</option>
         <option value="gemini-1.5-pro">Gemini 1.5 Pro</option>
         <option value="gemini-1.5-flash">Gemini 1.5 Flash</option>
+        <option value="gemini-2.5-flash">Gemini 2.5 Flash</option>
       </select>
     </div>
 
