--- a/settings.html
+++ b/settings.html
@@ -61,6 +61,7 @@
       <select id="model">
         <option value="gemini-1.5-pro">Gemini 1.5 Pro</option>
         <option value="gemini-1.5-flash">Gemini 1.5 Flash</option>
+        <option value="gemini-2.5-flash">Gemini 2.5 Flash</option>
         <option value="grok-3-beta">Grok-3 Beta</option>
         <option value="grok-3-fast-beta">Grok-3 Fast Beta</option>
         <option value="grok-3-mini-fast-beta">Grok-3 Mini Fast Beta</option>
